# rs-examples

trait-obj-vs-gens-trait-bounds/: Cargo.toml  README.md
trait-obj-vs-gens-trait-bounds/migrations/: 20241208_create_users.sql
trait-obj-vs-gens-trait-bounds/src/: error.rs  lib.rs  main.rs
trait-obj-vs-gens-trait-bounds/src/app/: app_gen_trait_bounds.rs  app_trait_obj.rs  mod.rs
trait-obj-vs-gens-trait-bounds/src/domain/data_store/: mod.rs  user_store.rs
trait-obj-vs-gens-trait-bounds/src/service/: mod.rs
trait-obj-vs-gens-trait-bounds/src/service/data_store/: hashmap_user_store.rs  mod.rs  postgres_user_store.rs
trait-obj-vs-gens-trait-bounds/src/utils/: constants.rs  mod.rs  utils.rs
