[package]
name = "trait-obj-vs-generics-trait-bounds"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.78"
color-eyre = "0.6"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"